--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,75 +1,121 @@
 
 body
 {
-background: #4CB8C4; /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #4CB8C4 , #3CD3AD); /* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(right, #4CB8C4 , #3CD3AD);
-background: linear-gradient(to left, #4CB8C4 , #3CD3AD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- font-family: 'Montserrat', sans-serif;
-  color: white;
-  font-size: 80px;
+    font-family: 'Montserrat', sans-serif;
 
+    padding: 1%;
+
+    color: white;
+    background: #4cb8c4; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #4cb8c4 , #3cd3ad); /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(right, #4cb8c4 , #3cd3ad);
+    background:         linear-gradient(to left, #4cb8c4 , #3cd3ad); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.center
+{
+    font-size: 20px;
+
+    top: auto;
+
+    width: 50%;
+    margin-left: 2%;
 }
 label
 {
-  display: block;
+    display: block;
 }
-.header 
-  {
+.header
+{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.25em;
+}
+
+.text1
+{
+    font-size: .75em;
+
+    display: inline-block;
+
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 8px;
+
+    -webkit-transition: 800ms all ease;
+            transition: 800ms all ease;
+
+    color: white;
+    border: 0;
+    border-bottom: white solid 1px;
+    background: transparent;
+}
+.text1:hover,
+.text1:focus
+{
+    font-size: 1em;
+    font-weight: 150;
+
+    display: block;
+
+    width: 100%;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+
+    -webkit-transition: 800ms all ease;
+            transition: 800ms all ease;
+
+    color: white;
+    border-bottom: white solid 5px;
+    border-radius: 5px;
+    outline: none;
+    background: transparent;
+}
+button
+{
+    font-size: 20px;
+    font-weight: 150;
+
+    margin: 2%;
+    padding: 1% 2%;
+
+    color: white;
+    border: white solid 3px;
+    background: none;
+}
+button:hover
+{
+    cursor: pointer;
+    -webkit-transition: 200ms all ease;
+            transition: 200ms all ease;
+    transform: scale(1.05);
+}
+#cool
+{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 80px;
+
+    display: block;
+
+    padding: 20px;
+
+    color: white;
+    border: white solid 5px;
+    border-radius: 50px;
+    outline: none;
+    background: transparent;
+}
+#cool:hover
+{
     font-family: 'Montserrat:400', sans-serif;
     font-size: 80px;
-  }
 
-.text1 {
-  background: transparent;
-padding: 8px;
-display: inline-block;
-  border: 0px;
-  font-size: 70px;
-  -webkit-transition: 800ms all ease;
-  transition:800ms all ease;
-  margin-top: 10px;
-  margin-bottom: 20px;
+    display: block;
 
-}
-.text1:hover,.text1:focus {
-  background: transparent;
-  -webkit-transition: 800ms all ease;
-  transition:800ms all ease;
-  border-bottom: white solid 5px;
-width: 100%;
-padding-bottom: 25px;
-font-weight: 200;
-font-size: 15px;
-display: block;
-  margin-bottom: 20px;
-  color: white;
-  font-size: 90px;
-  outline: none;
-  border-radius: 5px;
+    padding: 20px;
 
-}
-#cool {
-  background: transparent;
-  font-family: 'Montserrat:400', sans-serif;
-    font-size: 80px;
-  outline: none;
-  border: white solid 5px;
-  display:block;
-  border-radius: 50px;
-  padding: 20px;
-  color: white;
-	
-}
-#cool:hover {
-  background: transparent;
-  font-family: 'Montserrat:400', sans-serif;
-    font-size: 80px;
-  outline: none;
-  border: white solid 5px;
-  display:block;
-  border-radius: 50px;
-  padding: 20px;
-  color: white;
-	
+    color: white;
+    border: white solid 5px;
+    border-radius: 50px;
+    outline: none;
+    background: transparent;
 }
